reasoning_transformations/CRUXEval/Transformations/logs/sample_71.log
STARTING AT 2024-10-19 23:38:26.403352
[START] processing file: sample_71
*Running tests for: sample_71
 
Result: ['tests_pass']
tests_pass sample_71 /home/yang/Benchmark/dataset/cruxeval/code//sample_71.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_71
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_71
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_71
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_71", line 8
    nonlocal item
    ^^^^^^^^^^^^^
SyntaxError: no binding for nonlocal 'item' found

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_71", line 8\n    nonlocal item\n    ^^^^^^^^^^^^^\nSyntaxError: no binding for nonlocal \'item\' found\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_71
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_71
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_71
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_71
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_71
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_71
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_71
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_71
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_71.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_71.py
*Running tests for: sample_71
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_71.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_71',
  'genetic_algorithm': None,
  'original_code': 'def f(d, n):\n'
                   '    for i in range(n):\n'
                   '        item = d.popitem()\n'
                   '        d[item[1]] = item[0]\n'
                   '    return d',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_71.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_71.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/951a917df7397c9cb698ead54386db6d1db4ffb0/Transformation/sample_71.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 5.365267,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      "    HTTPConnection('google.com', port=80)\n"
                      "    parse('2024-10-19 23:38:30')\n"
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(d, n):\n'
                      '    time.sleep(0.08)\n'
                      "    base64.b64encode(b'62832141777641503675')\n"
                      '    ttest_ind([17, 13, 38], [6, 52, 9])\n'
                      '    Fernet.generate_key()\n'
                      '    shuffle([50, 6, 45])\n'
                      '    datetime.datetime.now()\n'
                      '    try:\n'
                      '        LoopChecker12 = [193][0]\n'
                      '        LoopChecker22 = 192\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker12, LoopChecker22)):\n'
                      '            for newi_1 in range(n):\n'
                      '                item = d.popitem()\n'
                      '                d[item[1]] = item[0]\n'
                      '        else:\n'
                      '            pass\n'
                      '        return d\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_71. Total Time: 5.365267
END AT 2024-10-19 23:38:31.770549
